[package]
name = "deucalion-bridge"
version = "0.1.0"
edition = "2021"
description = "Bridges the deucalion Win32 named pipe to TCP for native Linux Teamcraft"
license = "MIT"
repository = "https://github.com/birkholz/deucalion-bridge"

[[bin]]
name = "deucalion-bridge"

[dependencies]
clap   = { version = "4", features = ["derive"] }
anyhow = "1"

# Windows-only API bindings — only compiled when targeting Windows/Wine
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
] }

[profile.release]
opt-level = 3
strip     = true
